# effectful

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CLAUDE.md.backup  CONTRIBUTING.md  LICENSE  PURITY_REFACTOR.md  README.md  codex.toml  codex.yaml  pyproject.toml
demo/: README.md  (+1 more)
demo/healthhub/: .dockerignore  .gitignore  CLAUDE.md  poetry.toml  pyproject.toml
demo/healthhub/backend/: Dockerfile  pyproject.toml
demo/healthhub/backend/app/: __init__.py  config.py  main.py
demo/healthhub/backend/app/adapters/: asyncpg_pool.py  interpreter_factory.py  prometheus_observability.py  redis_factory.py
demo/healthhub/backend/app/api/: appointments.py  auth.py  dependencies.py  health.py  invoices.py  lab_results.py  patients.py  prescriptions.py
demo/healthhub/backend/app/auth/: __init__.py  jwt.py
demo/healthhub/backend/app/database/: __init__.py
demo/healthhub/backend/app/domain/: __init__.py  appointment.py  authorization.py  doctor.py  invoice.py  lab_result.py  lookup_result.py  optional_value.py  patient.py  prescription.py  user.py
demo/healthhub/backend/app/effects/: __init__.py  healthcare.py  notification.py  observability.py
demo/healthhub/backend/app/infrastructure/: __init__.py  database.py  rate_limiter.py  redis_client.py
demo/healthhub/backend/app/interpreters/: __init__.py  auditing_interpreter.py  composite_interpreter.py  healthcare_interpreter.py  notification_interpreter.py  observability_interpreter.py  runtime_interpreter.py
demo/healthhub/backend/app/observability/: __init__.py  registry.py
demo/healthhub/backend/app/programs/: __init__.py  appointment_programs.py  lab_result_programs.py  prescription_programs.py  runner.py  startup.py
demo/healthhub/backend/app/protocols/: __init__.py  observability.py  redis_factory.py
demo/healthhub/backend/app/repositories/: __init__.py  doctor_repository.py  patient_repository.py  user_repository.py
demo/healthhub/backend/scripts/: init_db.sql  seed_data.sql
demo/healthhub/backend/tests/: test_runtime_interpreter.py  test_startup_program.py
demo/healthhub/docker/: Dockerfile  docker-compose.yml
demo/healthhub/documents/: README.md  documentation_standards.md
demo/healthhub/documents/api/: README.md  README.md.bak2  effects.md  effects.md.bak2  messaging.md
demo/healthhub/documents/best_practices/: README.md  authorization_patterns.md  effect_program_patterns.md
demo/healthhub/documents/domain/: README.md  appointment_workflows.md  hipaa_compliance.md  medical_state_machines.md
demo/healthhub/documents/engineering/: README.md  architecture.md  authentication.md  authorization.md  authorization_patterns.md  boundary_map.md  build_artifact_management.md  build_artifact_management.md.bak2  code_quality.md  code_quality_enforcement.md  command_reference.md  configuration.md  configuration.md.bak2  development_workflow.md  development_workflow.md.bak2  docker.md  docker.md.bak2  docker_workflow.md  documentation_standards.md  effect_patterns.md  effect_patterns.md.bak2  external_assumptions.md  fastapi_integration_patterns.md  frontend_architecture.md  haskell_rust_migration.md  mermaid_standards.md  monitoring_and_alerting.md  monitoring_and_alerting.md.bak2  monitoring_observability.md  observability.md  purity_standards.md  security_hardening.md  state_machine_patterns.md  testing.md  testing_doctrine.md  total_pure_modelling.md  total_pure_modelling.md.bak2  verification_strategy.md  warnings_policy.md  websocket_security.md
demo/healthhub/documents/engineering/features/: README.md  appointments.md  authentication.md  invoices.md  lab_results.md  prescriptions.md
demo/healthhub/documents/product/: README.md  api_reference.md  appointment_state_machine.md  architecture_overview.md  audit_logging.md  authentication.md  authorization_system.md  domain_models.md  effects_reference.md  medication_interactions.md  notification_system.md
demo/healthhub/documents/product/roles/: README.md  admin_guide.md  doctor_guide.md  patient_guide.md
demo/healthhub/documents/product/workflows/: README.md  appointment_lifecycle.md  lab_result_workflow.md  patient_onboarding.md  prescription_workflow.md
demo/healthhub/documents/tutorials/: 01_quickstart.md  02_scheduling_appointments.md  03_prescriptions.md  04_lab_results.md  05_billing_invoices.md  06_authorization.md  07_notifications.md  08_testing_healthhub.md  README.md  adts_and_results.md  advanced_composition.md  effect_types.md  messaging_effects.md  migration_guide.md  production_deployment.md  quickstart.md  testing_guide.md
demo/healthhub/documents/tutorials/00_library_deltas/: README.md  adts_and_results.md  adts_and_results.md.bak2  advanced_composition.md  effect_types.md  effect_types.md.bak2  messaging_effects.md  migration_guide.md  production_deployment.md  quickstart.md  quickstart.md.bak2  testing_guide.md  testing_guide.md.bak2
demo/healthhub/documents/tutorials/01_journeys/: README.md  advanced_journey.md  beginner_journey.md  intermediate_journey.md
demo/healthhub/documents/tutorials/02_roles/: README.md  admin_guide.md  patient_guide.md
demo/healthhub/documents/tutorials/03_features/: README.md  appointments.md  invoices.md  lab_results.md  prescriptions.md
demo/healthhub/documents/tutorials/04_workflows/: README.md  lab_result_workflow.md  patient_onboarding.md  (+1 more)
demo/healthhub/frontend/: .env.example  Dockerfile  index.html  nginx.conf  vite.config.ts
demo/healthhub/frontend/src/: App.tsx  index.css  main.tsx
demo/healthhub/src/typescript/: .dockerignore  package.json  vite.config.ts
demo/healthhub/stubs/asyncpg/: __init__.pyi  connection.pyi  exceptions.pyi  pool.pyi  protocol.pyi
demo/healthhub/stubs/pydantic/: __init__.pyi
demo/healthhub/stubs/pydantic_settings/: __init__.pyi
demo/healthhub/stubs/redis/: __init__.pyi
demo/healthhub/tests/: __init__.py  conftest.py
demo/healthhub/tests/pytest/: __init__.py
demo/healthhub/tests/tests/: __init__.py  test_lifespan.py
demo/healthhub/tools/: __init__.py  check_code.py  test_runner.py
(+709 files in other folders)
