[tool.poetry]
name = "functional-effects"
version = "0.1.0"
description = "Reference implementation of functional effect system for Python backends"
authors = ["Shipnorth Team"]
readme = "README.md"
packages = [{include = "functional_effects"}]

[tool.poetry.dependencies]
python = "^3.12"
asyncpg = "^0.30.0"
redis = "^5.0.0"
websockets = "^12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
mypy = "^1.7.0"
black = "^23.11.0"
ruff = "^0.1.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=functional_effects",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=45",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_any_explicit = true
disallow_any_generics = false
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
mypy_path = "stubs"

[tool.black]
line-length = 100
target-version = ['py312']

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "W", "I", "N", "UP", "ANN", "B", "A", "C4", "ISC", "PIE", "PT", "Q", "RET", "SIM", "ARG", "PTH", "ERA", "PGH", "PL", "RUF"]
ignore = [
    "ANN101",  # Missing type annotation for self in method
    "ANN102",  # Missing type annotation for cls in classmethod
    "F821",    # Undefined name in type hints (PEP 695 generic syntax)
    "PLR2004", # Magic value used in comparison (acceptable in tests)
]

[tool.coverage.run]
branch = true
source = ["functional_effects"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@overload",
    "class.*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "\\.\\.\\.",
]
omit = [
    "functional_effects/infrastructure/*",
    "functional_effects/interpreters/base.py",
]
