[tool.poetry]
name = "effectful"
version = "0.1.0"
description = "Pure functional effect system for Python with algebraic data types and explicit error handling"
authors = ["Effectful Team"]
readme = "README.md"
packages = [{include = "effectful"}, {include = "effectful_tools"}]

[tool.poetry.dependencies]
python = "^3.12"
asyncpg = "^0.30.0"
redis = "^5.0.0"
websockets = "^12.0"
prometheus-client = "^0.20.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
pytest-timeout = "^2.3.1"
boto3 = "^1.41.0"
pre-commit = "^4.4.0"
mypy-boto3-s3 = "^1.41.0"
pulsar-client = "^3.8.0"
[tool.poetry.group.check.dependencies]
mypy = "^1.7.0"
black = "^23.11.0"
ruff = "^0.4.10"
mdformat = "^0.7.22"
mdformat-gfm = "^0.3.7"
mdformat-frontmatter = "^2.0.8"
mdformat-footnote = "^0.1.2"
mdformat-tables = "^1.0.0"
pymarkdownlnt = "^0.9.33"
codespell = "^2.4.1"

[tool.poetry.scripts]
# Code quality
check-code = "effectful_tools.check_code:main"
compliance-check = "effectful_tools.check_compliance:main"

# Testing
test-all = "effectful_tools.test_runner:run_all"
test-unit = "effectful_tools.test_runner:run_unit"
test-integration = "effectful_tools.test_runner:run_integration"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=effectful",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html",
    "--cov-report=xml",
]
cache_dir = "/opt/effectful/pytest_cache"
timeout = 60
timeout_method = "thread"
markers = [
    "integration: marks tests as integration tests requiring real infrastructure",
    "unit: marks tests as unit tests using mocks only",
]

[tool.mypy]
python_version = "3.12"
# Custom stubs path for type-safe asyncpg
mypy_path = "stubs"
# Maximum type safety configuration
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
warn_return_any = true
implicit_reexport = false
strict_equality = true
strict_concatenate = true

# Function definition requirements
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true

# Any type restrictions
disallow_any_explicit = true
disallow_any_expr = false
disallow_any_decorated = false
disallow_any_generics = true
disallow_any_unimported = true
disallow_subclassing_any = true

# Import and module handling
ignore_missing_imports = false
follow_imports = "normal"
strict_optional = true
no_implicit_optional = true

# Error reporting and display
show_error_context = true
show_column_numbers = true
show_error_codes = true
pretty = true
color_output = true
error_summary = true

# File coverage
files = ["effectful/", "tests/", "effectful_tools/"]
explicit_package_bases = true
namespace_packages = true

# Performance and caching
incremental = true
cache_dir = ".mypy_cache"
sqlite_cache = true

# Additional strictness
no_implicit_reexport = true
disallow_redefinition = true

# Per-module overrides for test infrastructure with boto3-stubs incompatibilities
[[tool.mypy.overrides]]
module = "tests.integration.conftest"
disable_error_code = ["arg-type"]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.coverage.run]
branch = true
source = ["effectful"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@overload",
    "class.*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "\\.\\.\\.",
]
omit = [
    "effectful/infrastructure/*",
    "effectful/interpreters/base.py",
    "effectful/adapters/*",
]
