[tool.poetry]
name = "healthhub"
version = "1.0.0"
description = "HealthHub Medical Center - Healthcare portal demo built on the Effectful effect system library"
authors = ["HealthHub Team"]
readme = "README.md"
packages = [{include = "backend"}]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"

# Parent library - effectful effect system
effectful = {path = "../..", develop = true}

# API dependencies
fastapi = ">=0.104.1,<1.0"
uvicorn = {extras = ["standard"], version = ">=0.24.0,<1.0"}
pydantic = ">=2.5.0,<3.0"
pydantic-settings = ">=2.1.0,<3.0"

# Database
asyncpg = ">=0.29.0,<1.0"

# Cache and messaging
redis = ">=5.0.1,<6.0"
pulsar-client = ">=3.3.0,<4.0"

# Authentication & Security
bcrypt = ">=4.1.2,<5.0"
pyjwt = ">=2.8.0,<3.0"
python-multipart = ">=0.0.6,<1.0"
python-jose = {extras = ["cryptography"], version = ">=3.3.0,<4.0"}
passlib = {extras = ["bcrypt"], version = ">=1.7.4,<2.0"}

# Storage (S3-compatible)
boto3 = ">=1.34.0,<2.0"

# Metrics
prometheus-client = ">=0.19.0,<1.0"

[tool.poetry.group.dev.dependencies]
# Code quality tools
mypy = ">=1.7.1,<2.0"
black = ">=23.11.0,<24.0"
ruff = ">=0.1.6,<1.0"

# Testing framework
pytest = ">=7.4.3,<8.0"
pytest-asyncio = ">=0.21.1,<1.0"
pytest-cov = ">=4.1.0,<5.0"
pytest-mock = ">=3.12.0,<4.0"
pytest-timeout = ">=2.3.1,<3.0"

# HTTP client for testing
httpx = ">=0.25.2,<1.0"

# E2E Testing (ShipNorth pattern - Playwright Python)
playwright = ">=1.40.0,<2.0"
pytest-playwright = ">=0.4.4,<1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# API servers - primary entrypoints
api-server = "backend.app.main:main"
api-dev = "backend.app.main:dev"

# Code quality command (Black + MyPy)
check-code = "tools.check_code:main"

# Test management (ShipNorth pattern)
test-all = "tools.test_runner:run_all"
test-backend = "tools.test_runner:run_backend"
test-integration = "tools.test_runner:run_integration"
test-e2e = "tools.test_runner:run_e2e"

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
    frontend/node_modules
  | frontend/build
  | \.git
  | \.venv
  | __pycache__
)/
'''

[tool.mypy]
python_version = "3.12"
mypy_path = "stubs"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
warn_return_any = true
implicit_reexport = false
strict_equality = true

# Function definition requirements
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true

# Any type restrictions
disallow_any_explicit = true
disallow_any_generics = true
disallow_subclassing_any = true

# Import handling
no_implicit_optional = true

# File coverage
files = ["backend/", "tests/pytest/", "tools/"]

# Error reporting
show_error_context = true
show_column_numbers = true
show_error_codes = true
pretty = true

[[tool.mypy.overrides]]
module = "pulsar.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "boto3.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "botocore.*"
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["backend", "tools", "tests"]

[tool.ruff.lint]
select = [
    "F",      # Pyflakes
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "I",      # isort
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
    "S",      # flake8-bandit
    "C4",     # flake8-comprehensions
    "PT",     # flake8-pytest-style
    "RET",    # flake8-return
    "SIM",    # flake8-simplify
]

ignore = [
    "E501",    # Line too long (Black handles this)
    "S101",    # Allow assert in tests
    "S105",    # Allow hardcoded passwords (test/demo data)
    "S106",    # Allow hardcoded password func args
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",    # Allow assert in tests
    "ARG001",  # Allow unused fixture arguments
    "ARG002",  # Allow unused method arguments
]
"tools/**/*.py" = [
    "S101",    # Allow assert for preconditions
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests/pytest"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--strict-markers --tb=short"
timeout = 60
timeout_method = "thread"
markers = [
    "backend: Backend unit tests (pytest-mock only, no real infrastructure)",
    "integration: Integration tests (real PostgreSQL, Redis, Pulsar, MinIO)",
    "e2e: End-to-end browser tests (Playwright across Chromium, Firefox, WebKit)",
]

[tool.coverage.run]
source = ["backend"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
